--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TRUE GYM</title>
+    <base href="/TrueGym/" />
     <link rel="stylesheet" href="./css/main.min.css" />
     <link
       rel="stylesheet"
@@ -15,7 +16,7 @@
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <a class="logo" href="./Index.html">
+            <a class="logo" href="./index.html">
               <img src="./images/logo.png" alt="Логотип TRUE GYM" />
             </a>
             <ul class="header__menu">
